# yq-doodle

./: .gitignore  CMakeLists.txt  README.md  configure.cmake
api/: CMakeLists.txt
api/art/: AbstractMetaWriter.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Doc.cpp  DocMetaWriter.hpp  Obj.cpp  Obj.hpp  ObjMetaWriter.hpp  Point.cpp  Point.hpp  Shape.cpp  Shape.hpp  forward.hpp  keywords.hpp  vertex.hpp
api/art/doc/: Canvas.hpp  Doc.cpp  Doc.hpp  DocMetaWriter.hpp  Library.cpp  Library.hpp
api/art/shape/: Box.ipp  Circle.cpp  Line.hpp  Line.ipp  Point.cpp  Polygon.ipp  Polyline.cpp  Polyline.hpp  Shape.hpp  Triangle.ipp  vertex.cpp  vertex.hpp
api/artQt/: CMakeLists.txt  CanvasQ.hpp  CanvasScene.cpp  CanvasScene.hpp  CanvasView.cpp  CanvasView.hpp  DocumentQ.cpp  DocumentQ.hpp  DocumentQMetaWriter.hpp  EditorQ.cpp  EditorQ.hpp  EditorQMetaWriter.hpp  ViewQ.cpp  artQt.cpp
api/artQt/canvas/: CanvasScene.hpp  CanvasView.cpp  CanvasView.hpp
api/artQt/kit/: EditorQMetaWriter.hpp  GraphicsQ.cpp  GraphicsQ.hpp  PaletteQ.cpp  PaletteQ.hpp  SceneQ.cpp  SceneQ.hpp  ToolBarQ.hpp  ViewQ.cpp  ViewQ.hpp
api/artVk/: CMakeLists.txt  artVk.cpp
api/b3/: CMakeLists.txt  Context.cpp  Doc.cpp  Doc.hpp  Frame.cpp  Frame.hpp  MapPainter.cpp  MapPainter.hpp  Obj.cpp  Obj.hpp  ObjMetaWriter.hpp  Painter.cpp  Painter.hpp  Parser.cpp  Parser.hpp  args.cpp  args.hpp  b3.hpp  context.cpp  context.hpp  keywords.hpp  logging.hpp  parse.cpp  parse.hpp  typedef.hpp  types.hpp
api/b3/annotate/: Circle.cpp  Label.hpp  Polyline.cpp  Style.hpp
api/b3/cmds/: annotatecmds.cpp  basic.cpp  frame.cpp  gridcmds.cpp  point.cpp  pointcmds.cpp
api/b3/grid/: Grid.hpp  Grid.ipp  HexGrid.hpp  RectGrid.ipp  TriGrid.ipp
api/b3/handler/: docmap.cpp  docstat.cpp
api/b3/map/: MapPainter.cpp  MapPainter.hpp  map.cpp  map.hpp  terrain_map.cpp
api/b3/paint/: MapPainter.hpp  PaintDevice.cpp  PaintDevice.hpp  RasterGenerator.cpp  SvgGenerator.cpp  SvgGenerator.hpp
api/b3/spatial/: Areal.hpp  Lineal.cpp  Lineal.hpp  Linear.cpp  Linear.hpp  Linear.ipp  Point.cpp  Point.hpp  Point.ipp  PointLine.ipp  Vertical.hpp  spatial.cpp
api/b3/terrain/: StdTerrain.cpp  TerPage.cpp  TerPage.hpp  TerTile.cpp  TerTile.hpp  Terrain.cpp  Terrain.hpp
api/b3/util/: ArgList.cpp  ArgList.hpp  ArgMap.cpp  ArgMap.hpp  args.cpp  args.hpp  parse.cpp  parse.hpp  parse.ipp  types.cpp  types.hpp  util.cpp
api/diagram/: CMakeLists.txt  DObject.cpp  DObject.hpp  DObjectMetaWriter.hpp  Project.cpp  Project.hpp  Project.hxx  keywords.hpp  logging.hpp  strings.hpp
api/diagram/bit/: Dim.hpp  ID.cpp  ID.hpp
api/diagram/config/: build.cpp  build.hpp
api/diagram/typedef/: dobject.hpp  id.hpp  project.hpp  revision.hpp
api/diagramQt/: CMakeLists.txt  DObjectTableModel.cpp  DObjectTableModel.hpp  ProjectQ.cpp  ProjectQ.hpp
api/diagramVk/: CMakeLists.txt
api/diagramVk/command/: DiagramCommand.cpp  DiagramCommand.hpp
api/doodle/: Association.cpp  Association.hpp  AssociationInfoWriter.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraInfoWriter.hpp  Canvas.cpp  Canvas.hpp  Canvas2D.cpp  Canvas2D.hpp  Constraint.cpp  Constraint.hpp  ConstraintInfoWriter.hpp  ConstraintMetaWriter.hpp  DDocument.cpp  DDocument.hpp  DDocument.hxx  DObject.cpp  DObject.hpp  DObjectInfoWriter.hpp  DObjectMetaWriter.hpp  Drawing2D.cpp  Drawing2D.hpp  Evaluator.cpp  Evaluator.hpp  Light.cpp  Light.hpp  LightInfoWriter.hpp  Motion.cpp  Motion.hpp  MotionInfoWriter.hpp  Point.cpp  Point.hpp  Portal.cpp  Portal.hpp  PortalInfoWriter.hpp  PortalMetaWriter.hpp  Project.cpp  Project.hpp  (+26 more)
api/doodle/0D/: Py0.cpp  Py0.hpp  Py0D.cpp  Py0D.hpp  Py0DInfoWriter.hpp  Py0InfoWriter.hpp
api/doodle/1D/: Py1.cpp  Py1.hpp  Py1D.cpp  Py1D.hpp  Py1DInfoWriter.hpp  Py1InfoWriter.hpp  Space1D.cpp  Space1D.hpp  Space1DInfoWriter.hpp
api/doodle/2D/: Canvas2D.cpp  Canvas2D.hpp  Drawing2D.cpp  Drawing2D.hpp  Page2D.cpp  Page2D.hpp  Py2.cpp  Py2.hpp  Py2D.cpp  Py2D.hpp  Py2DInfoWriter.hpp  Py2InfoWriter.hpp  Space2.cpp  Space2.hpp  Space2D.cpp  Space2D.hpp  Space2D.hxx  Space2DInfoWriter.hpp  Space2InfoWriter.hpp
api/doodle/2Z/: Space2Z.hpp  Space2ZInfoWriter.hpp
api/doodle/3D/: Py3.cpp  Py3.hpp  Py3D.cpp  Py3D.hpp  Py3DInfoWriter.hpp  Py3InfoWriter.hpp  Space3.cpp  Space3.hpp  Space3D.cpp  Space3D.hpp  Space3D.hxx  Space3DInfoWriter.hpp  Space3InfoWriter.hpp
api/doodle/4D/: Py4.cpp  Py4.hpp  Py4D.cpp  Py4D.hpp  Py4DInfoWriter.hpp  Py4InfoWriter.hpp  Space4D.cpp  Space4D.hpp  Space4DInfoWriter.hpp
api/doodle/bit/: ID.cpp  ID.hpp  SFormat.hpp  SStringMap.cpp  SStringMap.hpp  double.cpp  double.hpp
api/doodle/canvas/: Canvas2D.cpp  Canvas2D.hpp  Drawing2D.cpp  Drawing2D.hpp
api/doodle/py/: Circle.hpp  Curve.cpp  Curve.hpp  Point.cpp  Point.hpp
api/doodle/space/: Space1D.cpp  Space1D.hpp  Space1DInfoWriter.hpp  Space2D.cpp  Space2D.hpp  Space2DInfoWriter.hpp  Space2Z.hpp  Space3D.cpp  Space3D.hpp  Space3DInfoWriter.hpp  Space3DMetaWriter.hpp  Space4D.cpp  Space4D.hpp  Space4D.hxx  Space4DInfoWriter.hpp  (+1 more)
api/doodleQt/: CMakeLists.txt  DObjectTableModel.cpp  DObjectTableModel.hpp  Drawing2DWindow.cpp  Drawing2DWindow.hpp  ProjectQ.cpp  ProjectQ.hpp
api/doodleVk/: CMakeLists.txt
api/sdl/: CMakeLists.txt  Canvas.hpp  DObject.cpp  DObject.hpp  Paper.hpp  Project.cpp  Project.hpp  logging.hpp
api/yq/: CMakeLists.txt
docs/: b3.md  (+2 more)
exe/: CMakeLists.txt
exe/3x/: CMakeLists.txt
exe/art/: ArtApp.cpp  ArtApp.hpp  ArtMW.cpp  ArtMW.hpp  CMakeLists.txt  main.cpp
exe/artQt/: ArtApp.cpp  ArtApp.hpp  ArtMain.cpp  ArtMain.hpp  CMakeLists.txt  CanvasEditor.cpp  CanvasEditor.hpp  DocEditor.cpp  DocEditor.hpp  DocEditorMetaWriter.hpp  main.cpp
exe/b3/: CMakeLists.txt  b3.cpp  b3.hpp  debug.cpp  maps.cpp  points.cpp
exe/doodler/: CMakeLists.txt  DoodleApp.cpp  DoodleApp.hpp  DoodleMW.cpp  DoodleMW.hpp  ProjectExplorer.hpp  main.cpp
exe/doodlerQt/: CMakeLists.txt  DoodleApp.cpp  DoodleApp.hpp  DoodleMain.cpp  DoodleMain.hpp  main.cpp
res/: CMakeLists.txt  yqDoodleResources.cpp  yqDoodleResources.hpp  yqDoodleResources.qrc
test/: CMakeLists.txt  b3parse.cpp  evaluator.cpp
(+254 files in other folders)
